--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,9 @@
+1.1
+ * The DOMS GUI will now maintain the order of elements
+ * Support Abstract XML elememts
+ * Protection against cycles in the xml schemas
+ * Xml Attributes are now handled in the GUI. Empty attributes are always removed?
+ * The SDO Parsing works for LoC Mods 3.1 and 3.5 with their wrong usage of xml elements
+
 1.0
 Initial release
