--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.2
+ * Newest version of doms-central interface - supports new update tracker
+ * Better unit tests
+
 1.1
  * The DOMS GUI will now maintain the order of elements
  * Support Abstract XML elememts
