--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.4
+ * Make internal datastreams into updateable bean, by providing a setter method
+
 1.3
  * Support for datastreams of type "rawxml"
  * Use correct lastModifiedDate when getting changed objects
